--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </agm-direction>
   </agm-map>
 
-  <h5>Destination Address: {{address}}</h5>
+  <!-- <h5>Destination Address: {{address}}</h5> -->
   <!-- <div>Latitude: {{latitude}}</div>
   <div>Longitude: {{longitude}}</div> -->
   <div>Duration: {{duration}}</div>
