--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
+<h1>{{ title }}</h1>
+
 <div class="container">
   <div class="form-group">
     <label>Enter address</label>
-    <input type="text" class="form-control col-lg-6" (change)="setMarker($event)" placeholder="Your Current Location"
-      autocorrect="on" autocapitalize="off" spellcheck="on" type="text" #insearch>
+    <input type="text" class="form-control col-lg-6" placeholder="Your Current Location" autocorrect="on"
+      autocapitalize="off" spellcheck="on" type="text" #insearch>
     <select class="form-control  col-lg-4" (change)="selectRange($event.target.value)">
       <option value="">--- Select Radius ---</option>
       <option value="10">10</option>
@@ -10,12 +12,12 @@
       <option value="30">30</option>
       <option value="40">40</option>
     </select>
-    <!-- <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #nearsearch> -->
     <select class="form-control" (change)="changeDest($event.target.value)">
       <option *ngFor="let dest of dests" value={{dest.name}}>
         {{dest.name}}
       </option>
     </select>
+
   </div>
 
   <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" id="map" style="width: 65%;height: 300px;">
@@ -25,7 +27,7 @@
     </agm-direction>
   </agm-map>
 
-  <!-- <h5>Destination Address: {{address}}</h5> -->
+  <h5>Destination Address: {{address}}</h5>
   <!-- <div>Latitude: {{latitude}}</div>
   <div>Longitude: {{longitude}}</div> -->
   <div>Duration: {{duration}}</div>
